# app/Http/Controllers/Account/SingleUserController.php
@@ -12,6 +12,20 @@ use App\Http\Resources\UserResource;
 
 class SingleUserController extends Controller
 {
+    /**
+     * @OA\Get(
+     ** path="/api/v1/user",
+     *   tags={"User"},
+     *   summary="Show A Currently Authenticated User's Account",
+     *   operationId="userList",
+     *
+     *   @OA\Response(response=200,description="Success"),
+     *   @OA\Response(response=401,description="Unauthenticated"),
+     *   @OA\Response(response=500,description="Internal Server Error"),
+     *   @OA\Response(response=404,description="Page Not found"),
+     *   @OA\Response(response=422,description="Unprocessable Entity")
+     *),
+     **/
     public function __invoke(SingleUserAction $singleUserAction)
     {
         try {
