# app/Http/Controllers/Authentication/ForgotPasswordController.php
@@ -3,12 +3,34 @@
 namespace App\Http\Controllers\Authentication;
 
 use App\Http\Controllers\Controller;
+use Exception;
+use Illuminate\Http\JsonResponse;
 use Illuminate\Http\Request;
+use App\Actions\Auth\ForgotPasswordAction;
 
 class ForgotPasswordController extends Controller
 {
-    public function __invoke()
+
+    public function __invoke(Request $request, ForgotPasswordAction $forgotPasswordAction)
     {
-        return "forgot password";
+        try {
+            $token = $forgotPasswordAction->execute($request);
+
+            return new JsonResponse([
+                'success' => 1,
+                'data'    => [
+                    'reset_token' => $token
+                ],
+                'error'   => null,
+                'errors'  => [],
+                'extra'   => []
+            ], 200);
+        }
+        catch (Exception $e){
+            return new JsonResponse( [
+                'success' => 0,
+                'error'   => $e->getMessage()
+            ], 500);
+        }
     }
 }
